Closed Bug 1660144 Opened 5 years ago Closed 5 years ago

Remote video freezes instead of going to black., causing test failures

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: jib, Assigned: pehrsons)

References

Details

Attachments

(2 files, 1 obsolete file)

See Also: → 1547030

I see the same thing without bug 1652884 FWIW. It has some trouble turning black on mute at times too, when the video is flowing as it should. That I only saw with bug 1652884, so maybe that's the root cause of the intermittent here.

I'll try to fix both.

Status: NEW → ASSIGNED

Comment 0 turned out to be a red herring caused by autoplay, which I had on in Nightly and not in local build. Sorry 😕

Comment 1 seems like a real problem though, which I can repro. With https://jsfiddle.net/jib1/ux5cw31e/2 if I disable the track (check mute on the page) after ~3 seconds then the remote video freezes instead of going to black.

I seem to be able to repro the test failure in headless mode but not in non-headless mode. Here's a recording of a timed out headless-mode run: https://pernos.co/debug/4V0lv1t5l7CzUwhYsAparA/index.html

Summary: MediaEngineDefault (fake) device intermittently fails to transmit frames over peer connection, causing test failures → Remote video freezes instead of going to black., causing test failures
Attachment #9171092 - Attachment is obsolete: true
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/4c02a0f5d8a5 Test video frame blackness in VideoFrameConverter gtests. r=dminor https://hg.mozilla.org/integration/autoland/rev/0cb072c2593a On disabling VideoFrameConverter, take a path that actually turns the frame black. r=jib
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

Would you expect the changes here to mean that https://hg.mozilla.org/integration/autoland/rev/17e11043a3c8 can now be reverted?

Flags: needinfo?(jib)

Yes looks good. I'll re-enable it.

Flags: needinfo?(jib)
Depends on: 1662595
Blocks: 1662595
No longer depends on: 1662595
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: