Bug 1660144 - On disabling VideoFrameConverter, take a path that actually turns the frame black. r=jib

Depends on D87790

Differential Revision: https://phabricator.services.mozilla.com/D87791